--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ScheduleDevelop
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule_app
+spring.datasource.username=root
+spring.datasource.password=142mibn!@A
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
